<resources>
    <string name="app_name">BikePowerMeter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="content_description">Hello</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="measure_unit">Unit:</string>
    <string name="unit_metric">Metric</string>
    <string name="unit_imperial">Imperial</string>
    <string name="your_weight">Your Weight:</string>
    <string name="bike_weight">Bike Weight:</string>
    <string name="continue_text">Continue</string>
    <string name="power">Power</string>
    <string name="speed">Speed:</string>
    <string name="duration">Duration:</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="bike_tire_size">Bike Tire Size:</string>
    <string name="made_by">Made by:</string>
    <string name="relaxed">Relaxed</string>
    <string name="aggressive">Aggressive</string>
    <string name="aerodynamic">Aerodynamic</string>
    <string name="position">Position</string>
    <string name="n_a">N/A</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="km_h">km/h</string>
    <string name="_0">0</string>
</resources>
