<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/arcProgressHomePower"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/textViewHomePower"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        custom:arc_bottom_text="@string/power"
        custom:arc_finished_color="@color/colorPrimary"
        custom:arc_progress="0"
        custom:arc_stroke_width="15dp"
        custom:arc_suffix_text="watt"
        custom:arc_suffix_text_padding="40dp"
        custom:arc_text_color="@color/colorPrimary"
        custom:arc_text_size="100sp"
        custom:arc_unfinished_color="#767676" />

    <TextView
        android:id="@+id/textViewHomePower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/power"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewHomeSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radioGroup2"
        android:layout_below="@+id/radioGroup2"
        android:text="@string/speed"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewHomeDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewHomeSpeedText"
        android:layout_alignEnd="@+id/arcProgressHomePower"
        android:text="@string/duration"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewHomeSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewHomeSpeedText"
        android:layout_below="@+id/textViewHomeSpeedText"
        android:layout_marginTop="12dp"
        android:text="@string/_0_kmh"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnHomeStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="btnHomeStartOnClick"
        android:text="@string/start" />

    <LinearLayout
        android:id="@+id/linearLayoutHomeBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="6dp"
        android:visibility="invisible"
        android:weightSum="2">
        <!--style="?android:attr/buttonBarStyle"-->

        <Button
            android:id="@+id/btnHomePauseContinue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnHomePauseContinueOnClick"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/pause"/>
            <!--style="?android:attr/buttonBarButtonStyle"-->

        <Button
            android:id="@+id/btnHomeStop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnHomeStopOnClick"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/stop"/>
            <!--style="?android:attr/buttonBarButtonStyle"-->

    </LinearLayout>

    <Chronometer
        android:id="@+id/chronometerHomeDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewHomeDurationText"
        android:layout_alignTop="@+id/textViewHomeSpeed"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arcProgressHomePower"
        android:layout_centerHorizontal="true"
        android:text="@string/positon"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/radioGroup2">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/relaxed" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aggressive" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aerodynamic" />
    </RadioGroup>

</RelativeLayout>