<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doozy.bikepowermeter.firstrun.FirstRunActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewFirstRunAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewFirstRunLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstRunAppName" />

    <TextView
        android:id="@+id/textViewFirstRunUnit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@id/radioGroupFirstRunUnit"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="296dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/measure_unit"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFirstRunLogo" />

    <RadioGroup
        android:id="@+id/radioGroupFirstRunUnit"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFirstRunUnit"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstRunUnit"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFirstRunLogo">

        <RadioButton
            android:id="@+id/rbFirstRunMetric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_metric" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_imperial" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewFirstRunRiderWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_weight"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstRunUnit" />

    <EditText
        android:id="@+id/editTextFirstRunRiderWeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@id/editTextFirstRunRiderWeight"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFirstRunRiderWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstRunRiderWeight" />

    <TextView
        android:id="@+id/textViewFirstRunBikeWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/bike_weight"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstRunRiderWeight" />

    <EditText
        android:id="@+id/editTextFirstRunBikeWeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@id/editTextFirstRunBikeWeight"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFirstRunBikeWeight"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstRunRiderWeight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstRunBikeWeight" />

    <Button
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="sendMessage"
        android:text="@string/continue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstRunBikeWeight"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
